# Reduse

./: .cursorrules  .gitignore  README.md  config.py  db.py  docker-compose.yml  package-lock.json  pyproject.toml  security.py  start.py
ai/: base.py  google_provider.py  groq_provider.py  openai_provider.py  provider.py
ai/providers/: base.py  google.py  groq.py
backend/: Dockerfile  auth.py  cache.py  config.py  db.py  generate_types.py  pyproject.toml  security.py  start.py
backend/ai/: base.py
backend/ai/prompts/: base.py  listing_query.py  product_analysis.py
backend/ai/providers/: base.py  batch_processor.py  composite.py  factory.py  google.py  groq.py  llama_index.py
backend/domains/analysis/: repository.py  service.py
backend/logic/: analysis.py  analytics.py  query.py  scraping.py
backend/models/: subscription.py  usage.py
backend/prompts/: base.py  product_analysis.py
backend/routers/: all_defs.py  analysis.py  analytics.py  bug_reports.py  favorites.py  health.py  payments.py  schedule.py  scrape.py  usage.py
backend/routers/admin/: __init__.py  analysis.py  analytics.py  field_harmonization.py  scrape.py
backend/routers/admin/tasks/: __init__.py  functions.py  schedule.py
backend/routers/analytics/: __init__.py  price_stats.py
backend/routers/query/: __init__.py  listings.py
backend/routers/tasks/: __init__.py  functions.py  schedule.py
backend/schemas/: __init__.py  ai_cache.py  analysis.py  analytics.py  analyzed_listings.py  batch.py  bug_reports.py  embeddings.py  favorites.py  field_harmonization.py  filtering.py  listings.py  query.py  task.py  user.py  users.py
backend/services/: analysis.py  analysis_service.py  analytics.py  analytics_service.py  ebay.py  embeddings.py  favorites.py  listings.py  olx.py  query.py  scraper_base.py  usage.py
backend/services/analytics/: field_harmonization.py  price_stats.py
backend/services/crawler/: crawler.py  integration.py  router.py
backend/services/crawler/handlers/: handlers.py  olx.py
backend/services/scraper/: __init__.py  ebay.py  olx.py  scraper_base.py
backend/tasks/: function_introspection.py  scheduler.py  task_registry.py
backend/utils/: .env.template  cache.py  errors.py  logging_config.py  middleware.py  oauth.py  playwright_pool.py  rate_limiting.py  utils.py
frontend/: Dockerfile  bun.lockb  next.config.ts  package-lock.json  package.json
frontend/src/app/: Navbar.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: AdvancedFilter.tsx  AnalysisControls.tsx  AnalysisStatus.tsx  BugReportModal.tsx  ComparisonModal.tsx  FunctionScheduler.tsx  ListingCard.tsx  ListingsFilter.tsx  ListingsGrid.tsx  Navbar.tsx  PriceHistoryModal.tsx  RunFunction.tsx  ScheduleForm.tsx  ScheduleList.tsx  TaskList.tsx
frontend/src/hooks/: useFavorites.ts
frontend/src/lib/: api-client.ts  subscription.ts  types.ts  utils.ts
frontend/src/providers/: AuthProvider.tsx
logic/: analysis.py  back.py  query.py  scraping.py
prompts/: base.py  description_parser.py  product_analysis.py  product_categorization.py
routers/: analysis.py  query.py  schedule.py  scrape.py
schemas/: ai_cache.py  analyzed_listings.py  listings.py
services/: analysis_service.py  exceptions.py  olx.py  scraper_base.py
utils/: logging_config.py  rate_limiter.py
(+83 files in other folders)
