[tool.poetry]
name = "reduse"
version = "0.1.0"
description = ""
authors = ["Mycsina <andremacardoso@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "*"
beautifulsoup4 = "*"
fastapi = {extras = ["standard"], version = "*"}
playwright = "*"
google-generativeai = "*"
grpcio = "*"
beanie = "*"
motor = ">=3.6.0"
pymongo = "*"
openai = "*"
groq = "*"
pydantic-settings = "*"
tqdm = "*"
httpx = "*"
apscheduler = "*"
certifi = "*"
sse-starlette = "^2.2.1"
scikit-learn = "^1.6.1"
llama-index = "^0.12.22"
pydantic-to-typescript = "^2.0.0"
redis = "^5.2.1"
llama-index-llms-groq = "^0.3.1"
llama-index-llms-gemini = "^0.4.11"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
