[tool.poetry]
name = "reduse"
version = "0.1.0"
description = ""
authors = ["Mycsina <andremacardoso@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "*"
beautifulsoup4 = "*"
fastapi = {extras = ["standard"], version = "*"}
playwright = "*"
google-generativeai = "*"
beanie = "*"
motor = ">=3.6.0"
pymongo = "*"
groq = "*"
pydantic-settings = "*"
tqdm = "*"
httpx = "*"
apscheduler = "*"
certifi = "*"
sse-starlette = "*"
scikit-learn = "*"
crawlee = "*"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
fastapi-mcp = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
